# axum-inertia-svelte-demo

./: README.md  flake.nix  justfile  mise.toml
.helix/: languages.toml
server/: Cargo.toml  justfile
server/src/: main.rs
web-client/: justfile  package.json  pnpm-lock.yaml
web-client/e2e/: demo.test.ts
web-client/src/: main.ts  routes.ts  shared_definitions.ts
web-client/src/Pages/: Home.svelte
web-client/src/Pages/User/: Form.svelte  Layout.svelte  Show.svelte
web-client/src/lib/: Modal.svelte
