[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"]}
axum-extra = { version = "0.9.2", features = ["form", "typed-routing"] }
axum-inertia = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
typeshare = "1.0.0"
